crates/pg_syntax/tests/snapshots/postgres_regress/json@287.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT rec FROM json_populate_record(NULL::jsrec, '{\"rec\": {\"a\": \"abc\", \"c\": \"01.02.2003\", \"x\": 43.2}}') q;"
---
SelectStmt@0..107
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..10
    ColumnRef@7..10
      Ident@7..10 "rec"
  Whitespace@10..11 " "
  From@11..15 "FROM"
  Whitespace@15..16 " "
  RangeFunction@16..106
    List@16..103
      FuncCall@16..103
        Ident@16..36 "json_populate_record"
        Ascii40@36..37 "("
        TypeCast@37..48
          AConst@37..41
            NullP@37..41 "NULL"
          Typecast@41..43 "::"
          TypeName@43..48
            Ident@43..48 "jsrec"
        Ascii44@48..49 ","
        Whitespace@49..50 " "
        AConst@50..103
          Sconst@50..103 "'{\"rec\": {\"a\": \"abc\", ..."
    Ascii41@103..104 ")"
    Whitespace@104..105 " "
    Alias@105..106
      Ident@105..106 "q"
  Ascii59@106..107 ";"

