crates/pg_syntax/tests/snapshots/postgres_regress/json@288.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT rec FROM json_populate_record(NULL::jsrec, '{\"rec\": \"(abc,42,01.02.2003)\"}') q;"
---
SelectStmt@0..86
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..10
    ColumnRef@7..10
      Ident@7..10 "rec"
  Whitespace@10..11 " "
  From@11..15 "FROM"
  Whitespace@15..16 " "
  RangeFunction@16..85
    List@16..82
      FuncCall@16..82
        Ident@16..36 "json_populate_record"
        Ascii40@36..37 "("
        TypeCast@37..48
          AConst@37..41
            NullP@37..41 "NULL"
          Typecast@41..43 "::"
          TypeName@43..48
            Ident@43..48 "jsrec"
        Ascii44@48..49 ","
        Whitespace@49..50 " "
        AConst@50..82
          Sconst@50..82 "'{\"rec\": \"(abc,42,01. ..."
    Ascii41@82..83 ")"
    Whitespace@83..84 " "
    Alias@84..85
      Ident@84..85 "q"
  Ascii59@85..86 ";"

