crates/pg_syntax/tests/snapshots/postgres_regress/json@289.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT reca FROM json_populate_record(NULL::jsrec, '{\"reca\": 123}') q;"
---
SelectStmt@0..70
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..11 "reca"
  Whitespace@11..12 " "
  From@12..16 "FROM"
  Whitespace@16..17 " "
  RangeFunction@17..69
    List@17..66
      FuncCall@17..66
        Ident@17..37 "json_populate_record"
        Ascii40@37..38 "("
        TypeCast@38..49
          AConst@38..42
            NullP@38..42 "NULL"
          Typecast@42..44 "::"
          TypeName@44..49
            Ident@44..49 "jsrec"
        Ascii44@49..50 ","
        Whitespace@50..51 " "
        AConst@51..66
          Sconst@51..66 "'{\"reca\": 123}'"
    Ascii41@66..67 ")"
    Whitespace@67..68 " "
    Alias@68..69
      Ident@68..69 "q"
  Ascii59@69..70 ";"

