crates/pg_syntax/tests/snapshots/postgres_regress/json@291.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT reca FROM json_populate_record(NULL::jsrec, '{\"reca\": [{\"a\": \"abc\", \"b\": 456}, null, {\"c\": \"01.02.2003\", \"x\": 43.2}]}') q;"
---
SelectStmt@0..129
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..11 "reca"
  Whitespace@11..12 " "
  From@12..16 "FROM"
  Whitespace@16..17 " "
  RangeFunction@17..128
    List@17..125
      FuncCall@17..125
        Ident@17..37 "json_populate_record"
        Ascii40@37..38 "("
        TypeCast@38..49
          AConst@38..42
            NullP@38..42 "NULL"
          Typecast@42..44 "::"
          TypeName@44..49
            Ident@44..49 "jsrec"
        Ascii44@49..50 ","
        Whitespace@50..51 " "
        AConst@51..125
          Sconst@51..125 "'{\"reca\": [{\"a\": \"abc ..."
    Ascii41@125..126 ")"
    Whitespace@126..127 " "
    Alias@127..128
      Ident@127..128 "q"
  Ascii59@128..129 ";"

