crates/pg_syntax/tests/snapshots/postgres_regress/json@292.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT reca FROM json_populate_record(NULL::jsrec, '{\"reca\": [\"(abc,42,01.02.2003)\"]}') q;"
---
SelectStmt@0..90
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..11 "reca"
  Whitespace@11..12 " "
  From@12..16 "FROM"
  Whitespace@16..17 " "
  RangeFunction@17..89
    List@17..86
      FuncCall@17..86
        Ident@17..37 "json_populate_record"
        Ascii40@37..38 "("
        TypeCast@38..49
          AConst@38..42
            NullP@38..42 "NULL"
          Typecast@42..44 "::"
          TypeName@44..49
            Ident@44..49 "jsrec"
        Ascii44@49..50 ","
        Whitespace@50..51 " "
        AConst@51..86
          Sconst@51..86 "'{\"reca\": [\"(abc,42,0 ..."
    Ascii41@86..87 ")"
    Whitespace@87..88 " "
    Alias@88..89
      Ident@88..89 "q"
  Ascii59@89..90 ";"

