crates/pg_syntax/tests/snapshots/postgres_regress/json@294.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT rec FROM json_populate_record(\n\trow(NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,\n\t\trow('x',3,'2012-12-31 15:30:56')::jpop,NULL)::jsrec,\n\t'{\"rec\": {\"a\": \"abc\", \"c\": \"01.02.2003\", \"x\": 43.2}}'\n) q;"
---
SelectStmt@0..233
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..10
    ColumnRef@7..10
      Ident@7..10 "rec"
  Whitespace@10..11 " "
  From@11..15 "FROM"
  Whitespace@15..16 " "
  RangeFunction@16..232
    List@16..228
      FuncCall@16..228
        Ident@16..36 "json_populate_record"
        Ascii40@36..37 "("
        Newline@37..38 "\n"
        Newline@38..39 "\t"
        TypeCast@39..172
          RowExpr@39..164
            Row@39..42 "row"
            Ascii40@42..43 "("
            AConst@43..47
              NullP@43..47 "NULL"
            Ascii44@47..48 ","
            AConst@48..52
              NullP@48..52 "NULL"
            Ascii44@52..53 ","
            AConst@53..57
              NullP@53..57 "NULL"
            Ascii44@57..58 ","
            AConst@58..62
              NullP@58..62 "NULL"
            Ascii44@62..63 ","
            AConst@63..67
              NullP@63..67 "NULL"
            Ascii44@67..68 ","
            AConst@68..72
              NullP@68..72 "NULL"
            Ascii44@72..73 ","
            AConst@73..77
              NullP@73..77 "NULL"
            Ascii44@77..78 ","
            AConst@78..82
              NullP@78..82 "NULL"
            Ascii44@82..83 ","
            AConst@83..87
              NullP@83..87 "NULL"
            Ascii44@87..88 ","
            AConst@88..92
              NullP@88..92 "NULL"
            Ascii44@92..93 ","
            AConst@93..97
              NullP@93..97 "NULL"
            Ascii44@97..98 ","
            AConst@98..102
              NullP@98..102 "NULL"
            Ascii44@102..103 ","
            AConst@103..107
              NullP@103..107 "NULL"
            Ascii44@107..108 ","
            AConst@108..112
              NullP@108..112 "NULL"
            Ascii44@112..113 ","
            AConst@113..117
              NullP@113..117 "NULL"
            Ascii44@117..118 ","
            Newline@118..119 "\n"
            Newline@119..121 "\t\t"
            TypeCast@121..159
              RowExpr@121..152
                Row@121..124 "row"
                Ascii40@124..125 "("
                AConst@125..128
                  Sconst@125..128 "'x'"
                Ascii44@128..129 ","
                AConst@129..130
                  Iconst@129..130 "3"
                Ascii44@130..131 ","
                AConst@131..152
                  Sconst@131..152 "'2012-12-31 15:30:56'"
              Ascii41@152..153 ")"
              Typecast@153..155 "::"
              TypeName@155..159
                Ident@155..159 "jpop"
            Ascii44@159..160 ","
            AConst@160..164
              NullP@160..164 "NULL"
          Ascii41@164..165 ")"
          Typecast@165..167 "::"
          TypeName@167..172
            Ident@167..172 "jsrec"
        Ascii44@172..173 ","
        Newline@173..174 "\n"
        Newline@174..175 "\t"
        AConst@175..228
          Sconst@175..228 "'{\"rec\": {\"a\": \"abc\", ..."
    Newline@228..229 "\n"
    Ascii41@229..230 ")"
    Whitespace@230..231 " "
    Alias@231..232
      Ident@231..232 "q"
  Ascii59@232..233 ";"

