crates/pg_syntax/tests/snapshots/postgres_regress/json@296.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT json_populate_record(row(1,2), '{\"f1\": 0, \"f2\": 1}');"
---
SelectStmt@0..60
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..58
    FuncCall@7..58
      Ident@7..27 "json_populate_record"
      Ascii40@27..28 "("
      RowExpr@28..35
        Row@28..31 "row"
        Ascii40@31..32 "("
        AConst@32..33
          Iconst@32..33 "1"
        Ascii44@33..34 ","
        AConst@34..35
          Iconst@34..35 "2"
      Ascii41@35..36 ")"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..58
        Sconst@38..58 "'{\"f1\": 0, \"f2\": 1}'"
  Ascii41@58..59 ")"
  Ascii59@59..60 ";"

