crates/pg_syntax/tests/snapshots/postgres_regress/json@300.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT json_populate_record(row(1,2)::j_ordered_pair, '{\"x\": 1, \"y\": 0}');"
---
SelectStmt@0..74
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..72
    FuncCall@7..72
      Ident@7..27 "json_populate_record"
      Ascii40@27..28 "("
      TypeCast@28..52
        RowExpr@28..35
          Row@28..31 "row"
          Ascii40@31..32 "("
          AConst@32..33
            Iconst@32..33 "1"
          Ascii44@33..34 ","
          AConst@34..35
            Iconst@34..35 "2"
        Ascii41@35..36 ")"
        Typecast@36..38 "::"
        TypeName@38..52
          Ident@38..52 "j_ordered_pair"
      Ascii44@52..53 ","
      Whitespace@53..54 " "
      AConst@54..72
        Sconst@54..72 "'{\"x\": 1, \"y\": 0}'"
  Ascii41@72..73 ")"
  Ascii59@73..74 ";"

